<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/Text_14_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/room_info_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            style="@style/Text_12_Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name_label"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_room_name"
            style="@style/Text_14_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text_12_Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_code_label"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_bottom_control"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_room_code"
                style="@style/Text_16_Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.08"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/btn_copy_room_code"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/copy_room_code"
                android:focusable="true"
                android:src="@drawable/ic_coppy"
                android:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_close"
        style="@style/Text_10_Bold"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_btn_yellow_radius_3sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/black" />

</LinearLayout>
