<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:background="@android:color/transparent"
    android:id="@+id/layout_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_choose_season"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_remove"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_14_Bold"
                android:text="@string/update_title"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_12_Normal"
                android:text="@string/whats_new"
                android:layout_marginTop="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/description"
                style="@style/Text_10_Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:textColor="@color/text_cate"
                android:paddingVertical="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:id="@+id/status"
                android:visibility="gone">

                <TextView
                    android:id="@+id/title_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text_12_Normal"
                    android:text="@string/status"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text_12_Normal"
                    android:text="@string/obligatory"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_btn_white_radius_3sdp"
                    android:padding="@dimen/_3sdp"
                    />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/bg_btn_yellow_radius_3sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick">

                <TextView
                    style="@style/Text_12_Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/update_now"
                    android:textColor="@color/black" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_skip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:background="@drawable/bg_btn_white_radius_3sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick">

                <TextView
                    android:id="@+id/tv_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/Text_12_Bold"
                    android:text="@string/skip"
                    android:textColor="@color/black"
                    />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>