<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_app"
            android:clickable="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_information"
                style="@style/Text_14_Bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_6sdp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomOutlinedBox"
                    app:endIconMode="custom"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/display_name"
                        android:singleLine="true"
                        style="@style/Text_12_Normal"
                        android:paddingHorizontal="@dimen/_12sdp"/>
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomOutlinedBox"
                    app:endIconMode="custom"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_6sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:singleLine="true"
                        style="@style/Text_12_Normal"
                        android:paddingHorizontal="@dimen/_12sdp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text_10_Normal"
                android:text="@string/gender"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/text_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_6sdp">

                <TextView
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text_12_Normal"
                    android:text="@string/male"
                    android:background="@drawable/bg_item_stroke_white_radius_6sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text_12_Normal"
                    android:text="@string/female"
                    android:background="@drawable/bg_item_stroke_white_radius_6sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <TextView
                    android:id="@+id/unspecified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text_12_Normal"
                    android:text="@string/unspecified"
                    android:background="@drawable/bg_item_stroke_white_radius_6sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_40sdp">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    style="@style/Text_12_Bold"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_white_radius_6sdp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/_3sdp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_3sdp">
                    <TextView
                        android:id="@+id/update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_btn_yellow_radius_6sdp"
                        android:text="@string/update"
                        style="@style/Text_12_Bold"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:foreground="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ProgressBar
                        android:id="@+id/loading_update"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/black" />
                </FrameLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>
